Fixed the budget exceeding message popup to always appear center aligned with the icon

--- a/modules/openlmis-web/src/main/webapp/public/less/form-toolbar.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/form-toolbar.less
@@ -62,16 +62,16 @@
       padding: 6px 8px;
       margin: 0 14px;
       .rnr-form-error.budget-exceeded {
+        width: 250px;
         position: absolute;
         border-radius: 4px;
-        left: -71px;
-        min-width: 92px;
+        left: -132px;
         padding: 7px 9px;
         bottom: 25px;
         background: rgba(0, 0, 0, 0.7);
         font-size: 0.8em;
         text-align: center;
-        white-space: nowrap;
+        white-space: normal;
         color: #FFFFFF;
         &:after {
           height: 0;
@@ -81,8 +81,8 @@
           border-right: 8px solid transparent;
           border-bottom: 0;
           position: absolute;
-          left: 70px;
-          top: 28px;
+          left: 132px;
+          bottom: -6px;
           content: "";
         }
       }
